Scala 3 compat.